crates/tests/src/snapshots/invalid_range_assign.snap
---
source: crates/tests/src/lib.rs
expression: out
---
invalid_range_assign (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#invalid_range_assign)

  × array range select on an assignment left-hand side must be a constant, in-range, ascending slice
   ╭─[../../testcases/error/invalid_range_assign.veryl:5:12]
 4 │ ) {
 5 │     assign o[i_n+:2] = '{8'd1, 8'd2};
   ·            ────┬────
   ·                ╰── Error location
 6 │ }
   ╰────
  help: use a constant, in-range, ascending slice
