crates/tests/src/snapshots/invalid_select.snap
---
source: crates/tests/src/lib.rs
expression: out
---
invalid_select (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#invalid_select)

  × invalid select caused by out of range [2] > 2
   ╭─[../../testcases/error/invalid_select.veryl:3:27]
 2 │     let _a: logic<2> = 1;
 3 │     let _b: logic    = _a[2];
   ·                           ┬
   ·                           ╰── Error location
 4 │ }
   ╰────
  help:
