crates/tests/src/snapshots/invalid_select_after_range.snap
---
source: crates/tests/src/lib.rs
expression: out
---
invalid_select (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#invalid_select)

  × invalid select caused by select after range is not allowed
   ╭─[../../testcases/error/invalid_select_after_range.veryl:3:24]
 2 │     var a : logic<8>;
 3 │     let _b: logic    = a[3:0][0];
   ·                        ────┬────
   ·                            ╰── Error location
 4 │ }
   ╰────
  help:
