crates/tests/src/snapshots/invalid_string_operand.snap
---
source: crates/tests/src/lib.rs
expression: out
---
invalid_operand (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#invalid_operand)

  × string<24> cannot be used as a operand of + operator
   ╭─[../../testcases/error/invalid_string_operand.veryl:2:22]
 1 │ module invalid_string_operand {
 2 │     let _a: string = "abc" + "def";
   ·                      ──┬──
   ·                        ╰── Error location
 3 │ }
   ╰────
  help:
